# sql_db_mapper

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
examples/: postgres_db.sql
sql_db_mapper/: Cargo.toml
sql_db_mapper/src/: ast_convert.rs  connection.rs  db_model.rs  lib.rs  pg_select_types.rs  sql_tree.rs
sql_db_mapper/src/ast_convert/: sql_procs.rs  sql_types.rs
sql_db_mapper_core/: Cargo.toml
sql_db_mapper_core/src/: lib.rs  try_from_row.rs
sql_db_mapper_derive/: Cargo.toml
sql_db_mapper_derive/src/: lib.rs
src/: connection.rs  db_model.rs  helper_types.rs  lib.rs  orm.rs
