[package]
name = "sql_db_mapper"
version = "0.0.1"
authors = ["John Martin <johnmartin1225+rust@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Maps a SQL database to rust structs and functions"
repository = "https://github.com/JohnMartin95/sql_db_mapper"
edition = "2018"

[dependencies]
postgres = {version = "0.15", features = ["with-chrono"] }
rust_decimal = { version = "~1.0", features = ["postgres"] }
chrono = "0.4"

[lib]
name = "sql_db_mapper"
path = "src/lib.rs"

[[bin]]
name = "sql_db_mapper"
path = "src/bin/main.rs"
