[package]
name = "sql_db_mapper"
version = "0.0.2"
authors = ["John Martin <johnmartin1225+rust@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Maps a SQL database to rust structs and functions"
repository = "https://github.com/JohnMartin95/sql_db_mapper"
documentation = "https://docs.rs/sql_db_mapper/"
keywords = ["sql", "orm", "postgres"]
categories = ["command-line-utilities", "database"]
edition = "2018"

[dependencies]
postgres  = { version = "0.17", features = ["with-chrono-0_4"] }
syn = { version = "1.0", features = ["full"] }
quote = { version = "1.0.2" }
proc-macro2 = { version = "1.0.7" }
structopt = "0.3"

[lib]
name = "sql_db_mapper"
path = "src/lib.rs"

[[bin]]
name = "sql_db_mapper"
path = "src/bin/main.rs"
