[package]
name = "sql_db_mapper"
version = "0.1.0"
authors = ["John Martin <johnmartin1225+rust@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Maps a SQL database to rust structs and functions"
repository = "https://github.com/JohnMartin95/sql_db_mapper"
documentation = "https://docs.rs/sql_db_mapper/"
keywords = ["sql", "orm", "postgres"]
categories = ["command-line-utilities", "database"]
readme="README.md"
edition = "2018"

[dependencies]
postgres  = { version = "0.18", features = ["with-chrono-0_4"] }
quote = { version = "1.0" }
proc-macro2 = { version = "1.0" }
structopt = "0.3"
heck = "0.3.2"

sql_db_mapper_core = { path = "../sql_db_mapper_core", version = "0.1.0" }

[lib]
name = "sql_db_mapper"
path = "src/lib.rs"

[[bin]]
name = "sql_db_mapper"
path = "src/bin/main.rs"
