[package]
name = "sql_db_mapper_core"
version = "0.0.2"
authors = ["John Martin <johnmartin1225+rust@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Maps a SQL database to rust structs and functions"
repository = "https://github.com/JohnMartin95/sql_db_mapper"
documentation = "https://docs.rs/sql_db_mapper/"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = { version = "0.5.1", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.1.0", features = ["derive"] }
rust_decimal = { version = "1.1", features = ["postgres"] }
chrono = "0.4"
bytes = "0.5"
parking_lot = "0.10"
